src/ru/biosoft/math/unitparser/UnitParser.java
/* UnitParser.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. UnitParser.java */
package ru.biosoft.math.unitparser;
import java.util.logging.Level;
import java.util.logging.Logger;
import java.io.StringReader;

public class UnitParser/*@bgen(jjtree)*/implements UnitParserTreeConstants, UnitParserConstants {/*@bgen(jjtree)*/
  protected JJTUnitParserState jjtree = new JJTUnitParserState();private static Logger log = Logger.getLogger( UnitParser.class.getName() );
    public UnitParser()
    {
        this (new StringReader("0"));
    }
    public AstStart parse(String expression) throws ParseException
        {
            AstStart astStart;
            ReInit( new StringReader(expression) );
            astStart = Start();
            return astStart;

        }

/***************************************************************
 GRAMMAR START
 ***************************************************************/
  final public 
AstStart Start() throws ParseException {/*@bgen(jjtree) Start */
  AstStart jjtn000 = new AstStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      MultiplicativeExpression();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 17:{
        jj_consume_token(17);
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        ;
      }
      jj_consume_token(0);
jjtree.closeNodeScope(jjtn000, true);
  jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
}

/***************************************************************
 EXPRESSION
 ***************************************************************/
  final public 
 void MultiplicativeExpression() throws ParseException {
    UnitOrUnaryExpression();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MUL:
      case DIV:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MUL:{
AstFunNode jjtn001 = new AstFunNode(JJTFUNNODE);
       boolean jjtc001 = true;
       jjtree.openNodeScope(jjtn001);
        try {
          jj_consume_token(MUL);
          UnitOrUnaryExpression();
jjtree.closeNodeScope(jjtn001,  2);
         jjtc001 = false;
jjtn001.setOperator("*");
        } catch (Throwable jjte001) {
if (jjtc001) {
         jjtree.clearNodeScope(jjtn001);
         jjtc001 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte001 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte001;}
       }
       if (jjte001 instanceof ParseException) {
         {if (true) throw (ParseException)jjte001;}
       }
       {if (true) throw (Error)jjte001;}
        } finally {
if (jjtc001) {
         jjtree.closeNodeScope(jjtn001,  2);
       }
        }
        break;
        }
      case DIV:{
AstFunNode jjtn002 = new AstFunNode(JJTFUNNODE);
       boolean jjtc002 = true;
       jjtree.openNodeScope(jjtn002);
        try {
          jj_consume_token(DIV);
          UnitOrUnaryExpression();
jjtree.closeNodeScope(jjtn002,  2);
         jjtc002 = false;
jjtn002.setOperator("/");
        } catch (Throwable jjte002) {
if (jjtc002) {
         jjtree.clearNodeScope(jjtn002);
         jjtc002 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte002 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte002;}
       }
       if (jjte002 instanceof ParseException) {
         {if (true) throw (ParseException)jjte002;}
       }
       {if (true) throw (Error)jjte002;}
        } finally {
if (jjtc002) {
         jjtree.closeNodeScope(jjtn002,  2);
       }
        }
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

  final public void UnitOrUnaryExpression() throws ParseException {Token t;
    if (jj_2_1(12)) {
AstUnitNode jjtn001 = new AstUnitNode(JJTUNITNODE);
           boolean jjtc001 = true;
           jjtree.openNodeScope(jjtn001);
      try {
        MultiplicativeConstantExpression();
        MultiplicativeTypeExpression();
      } catch (Throwable jjte001) {
if (jjtc001) {
             jjtree.clearNodeScope(jjtn001);
             jjtc001 = false;
           } else {
             jjtree.popNode();
           }
           if (jjte001 instanceof RuntimeException) {
             {if (true) throw (RuntimeException)jjte001;}
           }
           if (jjte001 instanceof ParseException) {
             {if (true) throw (ParseException)jjte001;}
           }
           {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
             jjtree.closeNodeScope(jjtn001,  2);
           }
      }
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 18:{
        ParenthesesExpression();
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

  final public void ParenthesesExpression() throws ParseException {
    jj_consume_token(18);
    MultiplicativeExpression();
    jj_consume_token(19);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case POWER:{
AstFunNode jjtn001 = new AstFunNode(JJTFUNNODE);
         boolean jjtc001 = true;
         jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(POWER);
        UnaryConstantExpression();
jjtree.closeNodeScope(jjtn001,  2);
           jjtc001 = false;
jjtn001.setOperator("^");
      } catch (Throwable jjte001) {
if (jjtc001) {
           jjtree.clearNodeScope(jjtn001);
           jjtc001 = false;
         } else {
           jjtree.popNode();
         }
         if (jjte001 instanceof RuntimeException) {
           {if (true) throw (RuntimeException)jjte001;}
         }
         if (jjte001 instanceof ParseException) {
           {if (true) throw (ParseException)jjte001;}
         }
         {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
           jjtree.closeNodeScope(jjtn001,  2);
         }
      }
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
}

/***************************************************
* CONSTANT EXPRESSION
****************************************************/
  final public void MultiplicativeConstantExpression() throws ParseException {
    PowerConstantExpression();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MUL:
      case DIV:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MUL:{
AstFunNode jjtn001 = new AstFunNode(JJTFUNNODE);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
        try {
          jj_consume_token(MUL);
          PowerConstantExpression();
jjtree.closeNodeScope(jjtn001,  2);
          jjtc001 = false;
jjtn001.setOperator("*");
        } catch (Throwable jjte001) {
if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
        } finally {
if (jjtc001) {
            jjtree.closeNodeScope(jjtn001,  2);
          }
        }
        break;
        }
      case DIV:{
AstFunNode jjtn002 = new AstFunNode(JJTFUNNODE);
          boolean jjtc002 = true;
          jjtree.openNodeScope(jjtn002);
        try {
          jj_consume_token(DIV);
          PowerConstantExpression();
jjtree.closeNodeScope(jjtn002,  2);
          jjtc002 = false;
jjtn002.setOperator("/");
        } catch (Throwable jjte002) {
if (jjtc002) {
            jjtree.clearNodeScope(jjtn002);
            jjtc002 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte002 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte002;}
          }
          if (jjte002 instanceof ParseException) {
            {if (true) throw (ParseException)jjte002;}
          }
          {if (true) throw (Error)jjte002;}
        } finally {
if (jjtc002) {
            jjtree.closeNodeScope(jjtn002,  2);
          }
        }
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

  final public void PowerConstantExpression() throws ParseException {
    UnaryConstantExpression();
    if (jj_2_2(2)) {
AstFunNode jjtn001 = new AstFunNode(JJTFUNNODE);
           boolean jjtc001 = true;
           jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(POWER);
        UnaryConstantExpression();
jjtree.closeNodeScope(jjtn001,  2);
           jjtc001 = false;
jjtn001.setOperator("^");
      } catch (Throwable jjte001) {
if (jjtc001) {
             jjtree.clearNodeScope(jjtn001);
             jjtc001 = false;
           } else {
             jjtree.popNode();
           }
           if (jjte001 instanceof RuntimeException) {
             {if (true) throw (RuntimeException)jjte001;}
           }
           if (jjte001 instanceof ParseException) {
             {if (true) throw (ParseException)jjte001;}
           }
           {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
             jjtree.closeNodeScope(jjtn001,  2);
           }
      }
    } else {
      ;
    }
}

  final public void UnaryConstantExpression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:{
      RealConstant();
      break;
      }
    case 18:{
      ParenthesesConstantExpression();
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void ParenthesesConstantExpression() throws ParseException {
    jj_consume_token(18);
    MultiplicativeConstantExpression();
    jj_consume_token(19);
}

  final public void RealConstant() throws ParseException {/*@bgen(jjtree) Constant */
AstConstant jjtn000 = new AstConstant(JJTCONSTANT);
boolean jjtc000 = true;
jjtree.openNodeScope(jjtn000);Token t;
Number value;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER_LITERAL:{
        t = jj_consume_token(INTEGER_LITERAL);
try
        {
            value = Integer.valueOf(t.image);
        }
        catch (Exception e)
        {
            value = null;
            log.log(Level.SEVERE, "Can't parse \"" + t.image + "\"");
        }
        jjtn000.setValue(value);
        break;
        }
      case FLOATING_POINT_LITERAL:{
        t = jj_consume_token(FLOATING_POINT_LITERAL);
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
try
        {
            value = Double.valueOf(t.image);
        }
        catch (Exception e)
        {
        value = null;
        log.log(Level.SEVERE, "Can't parse \"" + t.image + "\"");
        }
        jjtn000.setValue(value);
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

/***************************************************
* TYPE EXPRESSION
****************************************************/
  final public void MultiplicativeTypeExpression() throws ParseException {
    PowerTypeExpression();
    label_3:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MUL:{
AstFunNode jjtn001 = new AstFunNode(JJTFUNNODE);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
        try {
          jj_consume_token(MUL);
          PowerTypeExpression();
jjtree.closeNodeScope(jjtn001,  2);
          jjtc001 = false;
jjtn001.setOperator("*");
        } catch (Throwable jjte001) {
if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
        } finally {
if (jjtc001) {
            jjtree.closeNodeScope(jjtn001,  2);
          }
        }
        break;
        }
      case DIV:{
AstFunNode jjtn002 = new AstFunNode(JJTFUNNODE);
          boolean jjtc002 = true;
          jjtree.openNodeScope(jjtn002);
        try {
          jj_consume_token(DIV);
          PowerTypeExpression();
jjtree.closeNodeScope(jjtn002,  2);
          jjtc002 = false;
jjtn002.setOperator("/");
        } catch (Throwable jjte002) {
if (jjtc002) {
            jjtree.clearNodeScope(jjtn002);
            jjtc002 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte002 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte002;}
          }
          if (jjte002 instanceof ParseException) {
            {if (true) throw (ParseException)jjte002;}
          }
          {if (true) throw (Error)jjte002;}
        } finally {
if (jjtc002) {
            jjtree.closeNodeScope(jjtn002,  2);
          }
        }
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

  final public void PowerTypeExpression() throws ParseException {Token t;
    Type();
    if (jj_2_4(2)) {
AstFunNode jjtn001 = new AstFunNode(JJTFUNNODE);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(POWER);
        UnaryConstantExpression();
jjtree.closeNodeScope(jjtn001,  2);
              jjtc001 = false;
jjtn001.setOperator("^");
      } catch (Throwable jjte001) {
if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
            jjtree.closeNodeScope(jjtn001,  2);
          }
      }
    } else {
      ;
    }
}

  final public void Type() throws ParseException {/*@bgen(jjtree) Type */
 AstType jjtn000 = new AstType(JJTTYPE);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(TYPE);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 20:{
        jj_consume_token(20);
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        ;
      }
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
jjtn000.setValue(t.image);
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_3R_MultiplicativeConstantExpression_177_9_15()
 {
    if (jj_scan_token(DIV)) return true;
    if (jj_3R_PowerConstantExpression_192_6_9()) return true;
    return false;
  }

  private boolean jj_3R_RealConstant_223_6_19()
 {
    if (jj_scan_token(INTEGER_LITERAL)) return true;
    return false;
  }

  private boolean jj_3R_MultiplicativeTypeExpression_267_9_8()
 {
    if (jj_scan_token(DIV)) return true;
    if (jj_3R_PowerTypeExpression_279_5_11()) return true;
    return false;
  }

  private boolean jj_3R_RealConstant_223_5_17()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_RealConstant_223_6_19()) {
    jj_scanpos = xsp;
    if (jj_scan_token(9)) return true;
    }
    return false;
  }

  private boolean jj_3R_MultiplicativeConstantExpression_171_9_10()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_MultiplicativeConstantExpression_171_9_14()) {
    jj_scanpos = xsp;
    if (jj_3R_MultiplicativeConstantExpression_177_9_15()) return true;
    }
    return false;
  }

  private boolean jj_3R_MultiplicativeConstantExpression_171_9_14()
 {
    if (jj_scan_token(MUL)) return true;
    if (jj_3R_PowerConstantExpression_192_6_9()) return true;
    return false;
  }

  private boolean jj_3R_MultiplicativeTypeExpression_261_9_7()
 {
    if (jj_scan_token(MUL)) return true;
    if (jj_3R_PowerTypeExpression_279_5_11()) return true;
    return false;
  }

  private boolean jj_3R_MultiplicativeConstantExpression_169_5_4()
 {
    if (jj_3R_PowerConstantExpression_192_6_9()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_MultiplicativeConstantExpression_171_9_10()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3_3()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_MultiplicativeTypeExpression_261_9_7()) {
    jj_scanpos = xsp;
    if (jj_3R_MultiplicativeTypeExpression_267_9_8()) return true;
    }
    return false;
  }

  private boolean jj_3R_ParenthesesConstantExpression_214_5_18()
 {
    if (jj_scan_token(18)) return true;
    if (jj_3R_MultiplicativeConstantExpression_169_5_4()) return true;
    if (jj_scan_token(19)) return true;
    return false;
  }

  private boolean jj_3R_MultiplicativeTypeExpression_259_5_5()
 {
    if (jj_3R_PowerTypeExpression_279_5_11()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_3()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_UnaryConstantExpression_208_6_13()
 {
    if (jj_3R_ParenthesesConstantExpression_214_5_18()) return true;
    return false;
  }

  private boolean jj_3R_UnaryConstantExpression_206_6_6()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_UnaryConstantExpression_206_6_12()) {
    jj_scanpos = xsp;
    if (jj_3R_UnaryConstantExpression_208_6_13()) return true;
    }
    return false;
  }

  private boolean jj_3R_UnaryConstantExpression_206_6_12()
 {
    if (jj_3R_RealConstant_223_5_17()) return true;
    return false;
  }

  private boolean jj_3R_Type_296_5_16()
 {
    if (jj_scan_token(TYPE)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(20)) jj_scanpos = xsp;
    return false;
  }

  private boolean jj_3_2()
 {
    if (jj_scan_token(POWER)) return true;
    if (jj_3R_UnaryConstantExpression_206_6_6()) return true;
    return false;
  }

  private boolean jj_3_1()
 {
    if (jj_3R_MultiplicativeConstantExpression_169_5_4()) return true;
    if (jj_3R_MultiplicativeTypeExpression_259_5_5()) return true;
    return false;
  }

  private boolean jj_3R_PowerConstantExpression_192_6_9()
 {
    if (jj_3R_UnaryConstantExpression_206_6_6()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_2()) jj_scanpos = xsp;
    return false;
  }

  private boolean jj_3_4()
 {
    if (jj_scan_token(POWER)) return true;
    if (jj_3R_UnaryConstantExpression_206_6_6()) return true;
    return false;
  }

  private boolean jj_3R_PowerTypeExpression_279_5_11()
 {
    if (jj_3R_Type_296_5_16()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_4()) jj_scanpos = xsp;
    return false;
  }

  /** Generated Token Manager. */
  public UnitParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[11];
  static private int[] jj_la1_0;
  static {
	   jj_la1_init_0();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x20000,0xc000,0xc000,0x40000,0x10000,0xc000,0xc000,0x40280,0x280,0xc000,0x100000,};
	}
  final private JJCalls[] jj_2_rtns = new JJCalls[4];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public UnitParser(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public UnitParser(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new UnitParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 11; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jjtree.reset();
	 jj_gen = 0;
	 for (int i = 0; i < 11; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public UnitParser(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new UnitParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 11; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new UnitParserTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jjtree.reset();
	 jj_gen = 0;
	 for (int i = 0; i < 11; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public UnitParser(UnitParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 11; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(UnitParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jjtree.reset();
	 jj_gen = 0;
	 for (int i = 0; i < 11; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   if (++jj_gc > 100) {
		 jj_gc = 0;
		 for (int i = 0; i < jj_2_rtns.length; i++) {
		   JJCalls c = jj_2_rtns[i];
		   while (c != null) {
			 if (c.gen < jj_gen) c.first = null;
			 c = c.next;
		   }
		 }
	   }
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }

  @SuppressWarnings("serial")
  static private final class LookaheadSuccess extends java.lang.Error {
    @Override
    public Throwable fillInStackTrace() {
      return this;
    }
  }
  static private final LookaheadSuccess jj_ls = new LookaheadSuccess();
  private boolean jj_scan_token(int kind) {
	 if (jj_scanpos == jj_lastpos) {
	   jj_la--;
	   if (jj_scanpos.next == null) {
		 jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
	   } else {
		 jj_lastpos = jj_scanpos = jj_scanpos.next;
	   }
	 } else {
	   jj_scanpos = jj_scanpos.next;
	 }
	 if (jj_rescan) {
	   int i = 0; Token tok = token;
	   while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
	   if (tok != null) jj_add_error_token(kind, i);
	 }
	 if (jj_scanpos.kind != kind) return true;
	 if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
	 return false;
  }

